--- a/k8s/city-api-deployment.yaml
+++ b/k8s/city-api-deployment.yaml
@@ -14,6 +14,21 @@ spec:
         app: city-api
     spec:
       serviceAccountName: city-api-sa
+      initContainers:
+      - name: init-config
+        image: busybox
+        command: ['/bin/sh', '-c']
+        args:
+        - |
+          mkdir -p /app/city-api/config
+          cp /shared-files/country-codes.json /app/city-api/config/
+          cp /shared-files/countryCities.sh /app/city-api/
+          chmod +x /app/city-api/countryCities.sh
+        volumeMounts:
+        - name: shared-files
+          mountPath: /shared-files
+        - name: app-code
+          mountPath: /app/city-api
       containers:
       - name: city-api
         image: joel030303/city-api:latest
@@ -59,12 +74,6 @@ spec:
         - name: shared-files
           mountPath: /app/shared/weather
           subPath: weather
-        - name: shared-files
-          mountPath: /app/city-api/countryCities.sh
-          subPath: countryCities.sh
-        - name: shared-files
-          mountPath: /app/city-api/config/country-codes.json
-          subPath: country-codes.json
       volumes:
       - name: app-code
         configMap:
@@ -75,4 +84,4 @@ spec:
       - name: shared-files
         configMap:
           name: shared-files
-          defaultMode: 0755  # This makes the script executable
+          defaultMode: 0755
