Update the start bash script for frontend Pods

--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -43,13 +43,30 @@ spec:
           touch /target/shared/__init__.py
           touch /target/shared/weather/__init__.py
           
+          # Fix file names (remove dots)
+          cd /target/shared/weather
+          mv weather.api.py api.py || true
+          mv weather.city_coordinates.py city_coordinates.py || true
+          mv weather.__init__.py __init__.py || true
+          
+          # Create start script
+          cat > /target/start.sh << 'EOF'
+          #!/bin/sh
+          cd /app
+          exec node server.js
+          EOF
+          chmod +x /target/start.sh
+          
           # List contents for debugging
           echo "Contents of /target/shared/weather:"
           ls -la /target/shared/weather/
+          echo "Contents of /target:"
+          ls -la /target/
           
           # Ensure files are readable
           chmod -R 644 /target/shared/weather/*
           find /target -type d -exec chmod 755 {} \;
+          chmod +x /target/start.sh
         volumeMounts:
         - name: shared-files
           mountPath: /shared-files
@@ -60,6 +77,7 @@ spec:
         image: joel030303/frontend:latest
         ports:
         - containerPort: 3001
+        command: ["/app/start.sh"]
         env:
         - name: KAFKA_PRODUCER_URL
           value: "http://kafka-producer:8000"
