--- a/k8s/city-api-deployment.yaml
+++ b/k8s/city-api-deployment.yaml
@@ -22,26 +22,40 @@ spec:
         - |
           # Create target directories
           mkdir -p /target/city_api/config
-          
-          # Create __init__.py to make it a proper Python package
-          touch /target/__init__.py
-          touch /target/city_api/__init__.py
+          mkdir -p /target/shared/weather
           
           # Copy files from ConfigMap
           cp -L /app-code/* /target/city_api/ || true
           
           # Copy files from shared-files
-          cp /shared-files/country-codes.json /target/city_api/config/
-          cp /shared-files/countryCities.sh /target/city_api/
+          cp -L /shared-files/country-codes.json /target/city_api/config/
+          cp -L /shared-files/countryCities.sh /target/city_api/
+          cp -L /shared-files/* /target/shared/weather/ || true
+          
+          # Create __init__.py files
+          touch /target/shared/__init__.py
+          touch /target/shared/weather/__init__.py
+          
+          # Fix file names (remove dots)
+          cd /target/shared/weather
+          mv weather.api.py api.py || true
+          mv weather.city_coordinates.py city_coordinates.py || true
+          mv weather.__init__.py __init__.py || true
+          
+          # Ensure files are executable
           chmod +x /target/city_api/countryCities.sh
           
           # List contents for debugging
-          echo "Contents of /target:"
-          ls -la /target/
           echo "Contents of /target/city_api:"
           ls -la /target/city_api/
-          echo "Contents of main.py:"
-          cat /target/city_api/main.py || echo "main.py not found"
+          echo "Contents of /target/shared/weather:"
+          ls -la /target/shared/weather/
+          
+          # Ensure files are readable
+          chmod -R 644 /target/shared/weather/*
+          chmod -R 644 /target/city_api/*
+          find /target -type d -exec chmod 755 {} \;
+          chmod +x /target/city_api/countryCities.sh
         volumeMounts:
         - name: shared-files
           mountPath: /shared-files
@@ -91,9 +105,6 @@ spec:
         - name: app-config
           mountPath: /app/configuration.yml
           subPath: configuration.yml
-        - name: shared-files
-          mountPath: /app/shared/weather
-          subPath: weather
       volumes:
       - name: app-code
         configMap:
