--- a/k8s/city-api-deployment.yaml
+++ b/k8s/city-api-deployment.yaml
@@ -21,20 +21,25 @@ spec:
         args:
         - |
           # Create base directories
-          mkdir -p /target/city-api/config
+          mkdir -p /target/city_api
           mkdir -p /target/shared/weather
           
           # Debug: List available files
           echo "Available files in /config-files:"
           ls -la /config-files
           
-          # Copy and rename files for city-api
-          cp /config-files/city-api.config.configuration.yml /target/city-api/config/configuration.yml
-          cp /config-files/city-api.config.city-edits.yml /target/city-api/config/city-edits.yml
-          cp /config-files/city-api.config.country-codes.json /target/city-api/config/country-codes.json
-          cp /config-files/city-api.countryCities.sh /target/city-api/countryCities.sh
+          # Copy and rename files for city-api package
+          cp /config-files/city-api.init.py /target/city_api/__init__.py
+          cp /config-files/city-api.main.py /target/city_api/main.py
           
-          # Copy and rename files for shared module
+          # Copy config files
+          mkdir -p /target/city_api/config
+          cp /config-files/city-api.config.configuration.yml /target/city_api/config/configuration.yml
+          cp /config-files/city-api.config.city-edits.yml /target/city_api/config/city-edits.yml
+          cp /config-files/city-api.config.country-codes.json /target/city_api/config/country-codes.json
+          cp /config-files/city-api.countryCities.sh /target/city_api/countryCities.sh
+          
+          # Copy shared module files
           cp /config-files/shared.init.py /target/shared/__init__.py
           cp /config-files/shared.utils.py /target/shared/utils.py
           cp /config-files/shared.weather.init.py /target/shared/weather/__init__.py
@@ -42,17 +47,17 @@ spec:
           cp /config-files/shared.weather.city_coordinates.py /target/shared/weather/city_coordinates.py
           
           # Debug: List target directories
-          echo "Contents of /target/city-api:"
-          ls -la /target/city-api
-          echo "Contents of /target/city-api/config:"
-          ls -la /target/city-api/config
+          echo "Contents of /target/city_api:"
+          ls -la /target/city_api
+          echo "Contents of /target/city_api/config:"
+          ls -la /target/city_api/config
           echo "Contents of /target/shared/weather:"
           ls -la /target/shared/weather
           
           # Set permissions
           find /target -type d -exec chmod 755 {} \;
           find /target -type f -exec chmod 644 {} \;
-          chmod +x /target/city-api/countryCities.sh || echo "Warning: Could not chmod countryCities.sh"
+          chmod +x /target/city_api/countryCities.sh || echo "Warning: Could not chmod countryCities.sh"
           chmod +x /target/shared/weather/city_coordinates.py || echo "Warning: Could not chmod city_coordinates.py"
         volumeMounts:
         - name: app-files
