--- a/helm/city-api/templates/configmaps.yaml
+++ b/helm/city-api/templates/configmaps.yaml
@@ -4,7 +4,13 @@ metadata:
   name: shared-code
   namespace: {{ .Release.Namespace }}
 data:
-  {{- (.Files.Glob "../../shared/**/*").AsConfig | nindent 2 }}
+  "__init__.py": |
+    # Shared package initialization
+  "utils.py": {{ (.Files.Get "../../shared/utils.py") | quote }}
+  "weather/__init__.py": |
+    # Weather package initialization
+  "weather/api.py": {{ (.Files.Get "../../shared/weather/api.py") | quote }}
+  "weather/city_coordinates.py": {{ (.Files.Get "../../shared/weather/city_coordinates.py") | quote }}
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -12,4 +18,9 @@ metadata:
   name: city-api-code
   namespace: {{ .Release.Namespace }}
 data:
-  {{- (.Files.Glob "../../city-api/**/*").AsConfig | nindent 2 }} 
+  "__init__.py": |
+    # City API package initialization
+  "main.py": {{ (.Files.Get "../../city-api/main.py") | quote }}
+  "config/configuration.yml": {{ (.Files.Get "../../city-api/config/configuration.yml") | quote }}
+  "config/city-edits.yml": {{ (.Files.Get "../../city-api/config/city-edits.yml") | quote }}
+  "config/country-codes.json": {{ (.Files.Get "../../city-api/config/country-codes.json") | quote }} 
