--- a/helm/city-api/templates/deployment.yaml
+++ b/helm/city-api/templates/deployment.yaml
@@ -30,24 +30,27 @@ spec:
           mkdir -p /setup/shared/weather
           
           echo "Created directories. Listing source files:"
+          echo "Contents of /shared:"
           ls -la /shared/
+          echo "Contents of /city-api:"
           ls -la /city-api/
           
           # Set up shared module
           echo "Setting up shared module..."
-          cp /shared/__init__.py /setup/shared/
-          cp /shared/utils.py /setup/shared/
-          cp /shared/weather.__init__.py /setup/shared/weather/__init__.py
-          cp /shared/weather.api.py /setup/shared/weather/api.py
-          cp /shared/weather.city_coordinates.py /setup/shared/weather/city_coordinates.py
+          cp /shared/__init__.py /setup/shared/ || echo "Failed to copy shared/__init__.py"
+          cp /shared/utils.py /setup/shared/ || echo "Failed to copy shared/utils.py"
+          cp /shared/weather.__init__.py /setup/shared/weather/__init__.py || echo "Failed to copy weather/__init__.py"
+          cp /shared/weather.api.py /setup/shared/weather/api.py || echo "Failed to copy weather/api.py"
+          cp /shared/weather.city_coordinates.py /setup/shared/weather/city_coordinates.py || echo "Failed to copy weather/city_coordinates.py"
           
           # Set up city-api module
           echo "Setting up city-api module..."
-          cp /city-api/__init__.py /setup/city_api/
-          cp /city-api/main.py /setup/city_api/
-          cp /city-api/config.configuration.yml /setup/city_api/config/configuration.yml
-          cp /city-api/config.city-edits.yml /setup/city_api/config/city-edits.yml
-          cp /city-api/config.country-codes.json /setup/city_api/config/country-codes.json
+          cp /city-api/__init__.py /setup/city_api/ || echo "Failed to copy city-api/__init__.py"
+          cp /city-api/main.py /setup/city_api/ || echo "Failed to copy city-api/main.py"
+          mkdir -p /setup/city_api/config
+          cp /city-api/config.configuration.yml /setup/city_api/config/configuration.yml || echo "Failed to copy config/configuration.yml"
+          cp /city-api/config.city-edits.yml /setup/city_api/config/city-edits.yml || echo "Failed to copy config/city-edits.yml"
+          cp /city-api/config.country-codes.json /setup/city_api/config/country-codes.json || echo "Failed to copy config/country-codes.json"
           
           # Set permissions
           echo "Setting permissions..."
@@ -55,6 +58,7 @@ spec:
           chmod -R 755 /setup
           
           echo "Final directory structure:"
+          echo "Contents of /setup:"
           ls -R /setup
         volumeMounts:
         - name: shared-code
@@ -74,10 +78,14 @@ spec:
         - |
           echo "Container starting..."
           echo "Python path: $PYTHONPATH"
-          echo "Directory contents:"
-          ls -R /app
+          echo "Directory contents of /app:"
+          ls -la /app
+          echo "Contents of /app/city_api:"
+          ls -la /app/city_api || echo "city_api directory not found"
+          echo "Contents of /app/shared:"
+          ls -la /app/shared || echo "shared directory not found"
           echo "Starting uvicorn..."
-          python -m uvicorn city_api.main:app --host 0.0.0.0 --port {{ .Values.service.port }}
+          python -m uvicorn city_api.main:app --host 0.0.0.0 --port {{ .Values.service.port }} --log-level debug
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
         env:
